tests/neg/inline-case-objects/Macro_1.scala

import scala.quoted._

object Macros {
  def impl(foo: Any): Expr[String] = foo.getClass.getCanonicalName.nn.toExpr
}

class Bar {
  case object Baz
}

package foo {
  class Bar {
    case object Baz
  }
}
